[package]
name = "import-squeeze"
version = "0.1.5"
edition = "2021"
description = "Fast CLI tool to remove blank lines between import statements"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
walkdir = "2"
globset = "0.4"
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
